# sdl2-sprite

./: CHANGELOG  LICENSE  README.md  sdl2-sprite.cabal
app/: Main.hs
src/SDL/: Sprite.hs
